<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.CS213.androidchess101.ChessActivity" >

    <GridView
        android:id="@+id/chessboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:columnWidth="60dp"
        android:gravity="center_horizontal"
        android:horizontalSpacing="0dp"
        android:numColumns="8"
        android:padding="0dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" >

        <Button
            android:id="@+id/AIButton"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/ai_btn" />

        <Button
            android:id="@+id/undoButton"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:text="@string/undo_btn" />

        <Button
            android:id="@+id/drawButton"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:text="@string/draw_btn" />

        <Button
            android:id="@+id/resignButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/resign_btn" />
    </LinearLayout>

    <TextView
        android:id="@+id/turnView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/white_turn" />

</RelativeLayout>